--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="navbar">
             <div class="item1"><p>Gourmet  au  Catering</p></div>
             <div class="item2">
-                <div class="item21"> <p class=".item21"> About</p></div>
-                 <div class="item21"> <p class=".item22"> Menu</p></div>
-                <div class="item21"> <p class=".item23"> Contact</p></div>
+                <div class="item21"> <p class=".item21"> <a href="#about">About</a></p></div>
+                 <div class="item21"> <p class=".item22"> <a href="#menu">Menu</a></p></div>
+                <div class="item21"> <p class=".item23"> <a href="#contact">Contact</a></p></div>
             </div>
         </div>
         <!-- </header> -->
@@ -29,7 +29,7 @@
                 <img class="img2" src="https://www.w3schools.com/w3images/tablesetting2.jpg" alt="">
             </div>
             <div class="content2">
-                <h3 class="chead">About Catering</h3>
+                <h3 class="chead" id="about">About Catering</h3>
                 <p class="chead h6">Tradition since 1889</p>
                 <p class="p">The Catering was founded in blabla by Mr. Smith in lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute iruredolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.We only use seasonal ingredients.
 
@@ -44,7 +44,7 @@
     
         <div class="container3">
              <div class="content2">
-                <h3 class="chead1">Our Menu</h3>
+                <h3 class="chead1" id="menu">Our Menu</h3>
                 <p class="p2">Bread Basket</p>
                 <p class="p3">Assortment of fresh baked fruit breads and muffins 5.50</p>
                 <p class="p2">Honey Almond Granola with Fruits</p>
@@ -67,7 +67,7 @@
     <hr>
     <footer>
         <div class="footer">
-             <h2 class="fhead">Contact</h2>
+             <h2 class="fhead" id="contact">Contact</h2>
         <p class="fp">We offer full-service catering for any event, large or small. We understand your needs and we will cater the food to satisfy the biggerst criteria of them all, both look and taste. Do not hesitate to contact us.</p>
         <h2 class="fp fh6">Catering Service, 42nd Living St, 43043 New York, NY</h2>
         <p class="fp2">You can also contact us by phone 00553123-2323 or email catering@catering.com, or you can send us a message here:</p>
