--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta property="og:title" content="Catering">
+    <meta property="og:discription" content="“The key to a successful event is delicious food and impeccable service.”">
+    <meta property="og:image" content="https://tse2.mm.bing.net/th?id=OIP.1IbLRSZro-cbtIl9lYDvPgHaE1&pid=Api&P=0&h=180">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
